# dz

./: 1.html  2.html  3.html  4.html  5.html  6.html  App.js  README.md  admin.py  app.py  blog.db  client.py  db.sqlite3  dz040422.py  homework070422.py  homework1.py  homework2.py  homework3.py  homework310322.py  homework4.py  last_task.py  number1.py  number2.py  number3.py  number4.py  number5.py  pyproject.toml  security.py  server.py  t1.py  t1_1.py  t1_2.py  t1_3.py  t1_4.py  t2.py  t2_2.py  t2_3.py  t3.py  t4.py  task.py  (+16 more)
api/: __init__.py  article.py  author.py  tag.py  user.py
app/: models.py  schema.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_book_biography_article.py
blog/: admin.py  app.py  blog.db
blog/forms/: article.py  user.py
blog/models/: __init__.py  article.py  article_tag.py  author.py  database.py  tag.py  user.py
blog/templates/: base.html  index.html
blog/views/: articles.py  auth.py  authors.py  users.py
components/: Author2.js  AuthorBook.js  Books.js
drf/: settings.py  urls.py
forms/: article.py
lesson 1/: main.py  views.py  workers.py
lesson 1/templates/: fbiworker.html  index.html
lesson 1/wavy/: core.py  routes.py  templates.py
models/: author.py  user.py
permissions/: user.py
primers2/: task_1.py  task_2.py  task_3.py  task_4.py  task_6_1.py  task_6_2.py  task_6_3.py  task_6_4.py  task_6_5.py  task_6_6.py
schemas/: __init__.py  article.py  author.py  tag.py  user.py
src/: App.js
src/components/: Auth.js  Author2.js  AuthorBook.js  Books.js
views/: articles.py
(+11 files in other folders)
